ahora quizas es final

--- a/propiedades_venta.html
+++ b/propiedades_venta.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,7 +11,6 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
-    <script src="assets/js/scripts.js" defer></script>
 </head>
 <body>
     <header class="p-3 bg-dark text-white">
@@ -27,12 +25,68 @@
     <main class="container mt-5">
         <h1 class="text-center">Propiedades en Venta</h1>
         <div id="propiedades-venta" class="row mt-4">
-            <!-- Properties will be dynamically rendered here -->
+            <!-- Las propiedades se renderizarán dinámicamente aquí -->
         </div>
     </main>
     <script>
-        const propiedades = window.propiedadesVenta;
-        renderPropiedades(propiedades, "propiedades-venta");
+        const propiedadesVenta = [
+            {
+                nombre: "Casa Familiar",
+                src: "assets/img/casa1.jpg",
+                descripcion: "Una hermosa casa con jardín amplio.",
+                ubicacion: "Santiago",
+                habitaciones: 4,
+                costo: 200000000,
+                smoke: false,
+                pets: true
+            },
+            {
+                nombre: "Departamento Moderno",
+                src: "assets/img/departamento1.jpg",
+                descripcion: "Departamento con excelente ubicación y diseño moderno.",
+                ubicacion: "Providencia",
+                habitaciones: 2,
+                costo: 120000000,
+                smoke: true,
+                pets: false
+            },
+            {
+                nombre: "Cabaña Acogedora",
+                src: "assets/img/cabana1.jpg",
+                descripcion: "Cabaña rústica perfecta para vacaciones.",
+                ubicacion: "Valdivia",
+                habitaciones: 3,
+                costo: 90000000,
+                smoke: false,
+                pets: true
+            }
+        ];
+
+        function renderPropiedades(arreglo, contenedorId) {
+            const contenedor = document.getElementById(contenedorId);
+            arreglo.forEach(propiedad => {
+                const template = `
+                    <div class="col-md-4">
+                        <div class="card mb-4">
+                            <img src="${propiedad.src}" class="card-img-top" alt="${propiedad.nombre}">
+                            <div class="card-body">
+                                <h5 class="card-title">${propiedad.nombre}</h5>
+                                <p class="card-text">${propiedad.descripcion}</p>
+                                <p><strong>Ubicación:</strong> ${propiedad.ubicacion}</p>
+                                <p><strong>Habitaciones:</strong> ${propiedad.habitaciones}</p>
+                                <p><strong>Precio:</strong> $${propiedad.costo.toLocaleString()}</p>
+                                <p>${propiedad.smoke ? "<span class='text-success'>Se permite fumar</span>" : "<span class='text-danger'>No se permite fumar</span>"}</p>
+                                <p>${propiedad.pets ? "<span class='text-success'>Se permiten mascotas</span>" : "<span class='text-danger'>No se permiten mascotas</span>"}</p>
+                            </div>
+                        </div>
+                    </div>
+                `;
+                contenedor.innerHTML += template;
+            });
+        }
+
+        renderPropiedades(propiedadesVenta.slice(0, 3), "propiedades-venta");
     </script>
+  <script src="assets/js/scripts.js"></script>
 </body>
 </html>
