--- a/index.html
+++ b/index.html
@@ -274,5 +274,6 @@
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"
     ></script>
-  </body>
+    <script src="assets/js/scripts.js"></script>
+</body>
 </html>
